--- a/package.json
+++ b/package.json
@@ -249,7 +249,7 @@
     "jest": "^27.2.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll"
   },
   "repository": {
     "type": "git",
